# LOREA

./: .gitignore  CMakeLists.txt  Makefile  PORT_MANIFEST.md  calculator.py  nvidia_backend.py  search_backend.py  test_calculator.py
include/: ansi.hpp  dashboard.hpp  http.hpp  interrupt.hpp  live_view.hpp  lorea.hpp  pty_session.hpp  render.hpp  secutil.hpp  terminal.hpp  toolparse.hpp  types.hpp  widgets.hpp
src/: ansi.cpp  dashboard.cpp  dashboard_html.cpp  http.cpp  interrupt.cpp  live_view.cpp  lorea_chat.cpp  lorea_context.cpp  lorea_core.cpp  lorea_download.cpp  lorea_main.cpp  lorea_mpc.cpp  lorea_plan_agents.cpp  lorea_repl.cpp  lorea_servers.cpp  lorea_session.cpp  lorea_tools.cpp  main.cpp  pty_session.cpp  render.cpp  secutil_helpers.cpp  secutil_launcher.cpp  secutil_platform.cpp  secutil_safety.cpp  secutil_sessions.cpp  terminal.cpp  toolparse.cpp  widgets.cpp
